--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "scripts": {
     "ng": "ng",
     "build:mediastream": "npm run lint:mediastream & npm run test:mediastream & ng build --prod mediastream",
+    "build:broadcast-channel": "npm run lint:broadcast-channel & npm run test:broadcast-channel & ng build --prod broadcast-channel",
     "lint": "ng lint --format stylish",
     "lint:fix": "npm run lint -- --fix",
+    "lint:broadcast-channel": "npm run lint -- broadcast-channel",
+    "lint:broadcast-channel:fix": "npm run lint:broadcast-channel -- --fix",
     "lint:mediastream": "npm run lint -- mediastream",
     "lint:mediastream:fix": "npm run lint:mediastream -- --fix",
+    "package:broadcast-channel": "npm run build:broadcast-channel && cd ./dist/broadcast-channel && npm pack",
+    "publish:broadcast-channel": "cd ./dist/broadcast-channel && npm publish --access=public",
     "package:mediastream": "npm run build:mediastream && cd ./dist/mediastream && npm pack",
     "publish:mediastream": "cd ./dist/mediastream && npm publish --access=public",
     "test": "ng test --browsers ChromeHeadless --watch false",
     "test:watch": "npm run test -- --watch true",
+    "test:broadcast-channel": "npm run test -- broadcast-channel",
+    "test:broadcast-channel:watch": "npm run test:broadcast-channel -- --watch true",
     "test:mediastream": "npm run test -- mediastream",
     "test:mediastream:watch": "npm run test:mediastream -- --watch true"
   },
