--- a/projects/broadcast-channel/package.json
+++ b/projects/broadcast-channel/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ashetm/ng-mediastream",
-  "version": "1.0.0",
+  "name": "@ashetm/ng-broadcast-channel",
+  "version": "0.0.1",
   "contributors": [
     {
       "email": "contact@ashetm.com",
@@ -15,20 +15,21 @@
   },
   "keywords": [
     "angular",
-    "mediastream",
+    "broadcast-channel",
     "js",
     "api",
-    "media",
-    "stream",
+    "channel",
+    "broadcast",
     "ng",
     "ng-service",
     "ng-services",
-    "ng-mediastream",
+    "ng-broadcast",
+    "ng-broadcast-channel",
     "service"
   ],
   "private": false,
   "repository": {
-    "url": "https://github.com/AsheTM/ng-services/tree/main/projects/mediastream"
+    "url": "https://github.com/AsheTM/ng-services/tree/main/projects/broadcast-channel"
   },
   "peerDependencies": {
     "@angular/common": "^11.2.14",
