--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "build:mediastream": "npm run lint:mediastream & npm run test:mediastream & ng build mediastream --configuration=production",
     "build:broadcast-channel": "npm run lint:broadcast-channel & npm run test:broadcast-channel & ng build broadcast-channel --configuration=production",
     "build:sample-broadcast-channel": "npm run build:broadcast-channel && ng build sample-broadcast-channel --configuration=production",
+    "build:utility": "npm run lint:utility & npm run test:utility & ng build utility --configuration=production",
     "lint": "ng lint --format stylish",
     "lint:fix": "npm run lint -- --fix",
     "lint:broadcast-channel": "npm run lint -- broadcast-channel",
     "lint:broadcast-channel:fix": "npm run lint:broadcast-channel -- --fix",
     "lint:mediastream": "npm run lint -- mediastream",
     "lint:mediastream:fix": "npm run lint:mediastream -- --fix",
+    "lint:utility": "npm run lint -- utility",
+    "lint:utility:fix": "npm run lint:utility -- --fix",
     "package:broadcast-channel": "npm run build:broadcast-channel && cd ./dist/broadcast-channel && npm pack",
-    "publish:broadcast-channel": "cd ./dist/broadcast-channel && npm publish --access=public",
     "package:mediastream": "npm run build:mediastream && cd ./dist/mediastream && npm pack",
+    "package:utility": "npm run build:utility && cd ./dist/utility && npm pack",
+    "publish:broadcast-channel": "cd ./dist/broadcast-channel && npm publish --access=public",
     "publish:mediastream": "cd ./dist/mediastream && npm publish --access=public",
+    "publish:utility": "cd ./dist/utility && npm publish --access=public",
     "start": "ng serve -o",
     "start:sample-broadcast-channel": "npm start -- sample-broadcast-channel --port 4233",
     "test": "ng test --browsers ChromeHeadless --watch false",
@@ -31,6 +36,8 @@
     "test:broadcast-channel:watch": "npm run test:broadcast-channel -- --watch true",
     "test:mediastream": "npm run test -- mediastream",
     "test:mediastream:watch": "npm run test:mediastream -- --watch true",
+    "test:utility": "npm run test -- utility",
+    "test:utility:watch": "npm run test:utility -- --watch true",
     "e2e": "ng e2e"
   },
   "dependencies": {
