--- a/projects/utility/package.json
+++ b/projects/utility/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ashetm/ng-utility",
-  "version": "1*.0.0",
+  "version": "14.0.0",
   "contributors": [
     {
       "email": "contact@ashetm.com",
