--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   ],
   "scripts": {
     "ng": "ng",
-    "build:mediastream": "npm run lint:mediastream & npm run test:mediastream & ng build --prod mediastream",
-    "build:broadcast-channel": "npm run lint:broadcast-channel & npm run test:broadcast-channel & ng build --prod broadcast-channel",
-    "build:sample-broadcast-channel": "npm run build:broadcast-channel && ng build --prod sample-broadcast-channel",
+    "build:mediastream": "npm run lint:mediastream & npm run test:mediastream & ng build mediastream --configuration=production",
+    "build:broadcast-channel": "npm run lint:broadcast-channel & npm run test:broadcast-channel & ng build broadcast-channel --configuration=production",
+    "build:sample-broadcast-channel": "npm run build:broadcast-channel && ng build sample-broadcast-channel --configuration=production",
     "lint": "ng lint --format stylish",
     "lint:fix": "npm run lint -- --fix",
     "lint:broadcast-channel": "npm run lint -- broadcast-channel",
