--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
+    "compilationMode": "partial",
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
