--- a/projects/utility/package.json
+++ b/projects/utility/package.json
@@ -2,8 +2,10 @@
   "name": "@ashetm/ng-utility",
   "version": "1*.0.0",
   "peerDependencies": {
-    "@angular/common": "^1*.0.0",
-    "@angular/core": "^1*.0.0"
+    "@angular/cdk": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
