Init @ashetm/ng-openai Angular library

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ng": "ng",
     "build:mediastream": "npm run lint:mediastream & npm run test:mediastream & ng build mediastream --configuration=production",
     "build:broadcast-channel": "npm run lint:broadcast-channel & npm run test:broadcast-channel & ng build broadcast-channel --configuration=production",
+    "build:openai": "npm run lint:openai & npm run test:openai & ng build openai --configuration=production",
     "build:sample-broadcast-channel": "npm run build:broadcast-channel && ng build sample-broadcast-channel --configuration=production",
     "lint": "ng lint --format stylish",
     "lint:fix": "npm run lint -- --fix",
@@ -19,10 +20,14 @@
     "lint:broadcast-channel:fix": "npm run lint:broadcast-channel -- --fix",
     "lint:mediastream": "npm run lint -- mediastream",
     "lint:mediastream:fix": "npm run lint:mediastream -- --fix",
+    "lint:openai": "npm run lint -- openai",
+    "lint:openai:fix": "npm run lint:openai -- --fix",
     "package:broadcast-channel": "npm run build:broadcast-channel && cd ./dist/broadcast-channel && npm pack",
-    "publish:broadcast-channel": "cd ./dist/broadcast-channel && npm publish --access=public",
     "package:mediastream": "npm run build:mediastream && cd ./dist/mediastream && npm pack",
+    "package:openai": "npm run build:openai && cd ./dist/openai && npm pack",
+    "publish:broadcast-channel": "cd ./dist/broadcast-channel && npm publish --access=public",
     "publish:mediastream": "cd ./dist/mediastream && npm publish --access=public",
+    "publish:openai": "cd ./dist/openai && npm publish --access=public",
     "start": "ng serve -o",
     "start:sample-broadcast-channel": "npm start -- sample-broadcast-channel --port 4233",
     "test": "ng test --browsers ChromeHeadless --watch false",
@@ -31,6 +36,8 @@
     "test:broadcast-channel:watch": "npm run test:broadcast-channel -- --watch true",
     "test:mediastream": "npm run test -- mediastream",
     "test:mediastream:watch": "npm run test:mediastream -- --watch true",
+    "test:openai": "npm run test -- openai",
+    "test:openai:watch": "npm run test:openai -- --watch true",
     "e2e": "ng e2e"
   },
   "dependencies": {
@@ -39,6 +46,7 @@
     "@angular/core": "^14.2.12",
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
+    "openai": "^3.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
