Add some metadatas in package.json's openai

--- a/projects/openai/package.json
+++ b/projects/openai/package.json
@@ -15,11 +15,12 @@
   },
   "keywords": [
     "angular",
-    "mediastream",
+    "chatgpt",
     "js",
     "api",
-    "media",
-    "stream",
+    "openai",
+    "ai",
+    "chat",
     "ng",
     "ng-service",
     "ng-services",
