--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular/cdk": "^15.1.3",
     "@angular/common": "^15.1.3",
     "@angular/compiler": "^15.1.3",
     "@angular/core": "^15.1.3",
+    "@angular/forms": "^15.1.3",
     "@angular/platform-browser": "^15.1.3",
     "@angular/platform-browser-dynamic": "^15.1.3",
     "rxjs": "~6.6.0",
