--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.2.12",
     "@angular/compiler": "^14.2.12",
     "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "rxjs": "~6.6.0",
