--- a/projects/utility/package.json
+++ b/projects/utility/package.json
@@ -1,6 +1,35 @@
 {
   "name": "@ashetm/ng-utility",
   "version": "1*.0.0",
+  "contributors": [
+    {
+      "email": "contact@ashetm.com",
+      "name": "DAWOUD Haitham",
+      "url": "http://ashetm.com"
+    }
+  ],
+  "author": {
+    "email": "contact@ashetm.com",
+    "name": "DAWOUD Haitham",
+    "url": "http://ashetm.com"
+  },
+  "keywords": [
+    "angular",
+    "utility",
+    "js",
+    "pipe",
+    "pipes",
+    "ng",
+    "ng-pipe",
+    "ng-service",
+    "ng-services",
+    "ng-utility",
+    "service"
+  ],
+  "private": false,
+  "repository": {
+    "url": "https://github.com/AsheTM/ng-services/tree/release/%40ashetm/ng-utility/projects/utility"
+  },
   "peerDependencies": {
     "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.0.0",
