--- a/projects/utility/package.json
+++ b/projects/utility/package.json
@@ -31,10 +31,11 @@
     "url": "https://github.com/AsheTM/ng-services/tree/release/%40ashetm/ng-utility/projects/utility"
   },
   "peerDependencies": {
-    "@angular/cdk": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0"
+    "@angular/cdk": ">=16.0.0",
+    "@angular/common": ">=16.0.0",
+    "@angular/core": ">=16.0.0",
+    "@angular/forms": ">=16.0.0",
+    "rxjs": ">=6.6.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
