--- a/package.json
+++ b/package.json
@@ -41,22 +41,22 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/cdk": "^15.1.3",
-    "@angular/common": "^15.1.3",
-    "@angular/compiler": "^15.1.3",
-    "@angular/core": "^15.1.3",
-    "@angular/forms": "^15.1.3",
-    "@angular/platform-browser": "^15.1.3",
-    "@angular/platform-browser-dynamic": "^15.1.3",
+    "@angular/cdk": "^16.0.4",
+    "@angular/common": "^16.0.6",
+    "@angular/compiler": "^16.0.6",
+    "@angular/core": "^16.0.6",
+    "@angular/forms": "^16.0.6",
+    "@angular/platform-browser": "^16.0.6",
+    "@angular/platform-browser-dynamic": "^16.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.4",
-    "@angular/cli": "^15.1.4",
-    "@angular/compiler-cli": "^15.1.3",
-    "@schematics/angular": "^11.2.19",
+    "@angular-devkit/build-angular": "^16.0.6",
+    "@angular/cli": "^16.0.6",
+    "@angular/compiler-cli": "^16.0.6",
+    "@schematics/angular": "^16.0.6",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -67,7 +67,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^15.1.1",
+    "ng-packagr": "^16.2.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
