--- a/projects/utility/package.json
+++ b/projects/utility/package.json
@@ -24,7 +24,11 @@
     "ng-service",
     "ng-services",
     "ng-utility",
-    "service"
+    "observable",
+    "operators",
+    "service",
+    "rxjs",
+    "rxjs/operators"
   ],
   "private": false,
   "repository": {
