Update tsconfig of ng-utility

--- a/projects/utility/tsconfig.lib.prod.json
+++ b/projects/utility/tsconfig.lib.prod.json
@@ -5,6 +5,9 @@
     "declarationMap": false
   },
   "angularCompilerOptions": {
-    "compilationMode": "partial"
+    "compilationMode": "full",
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableIvy": true
   }
 }
