update - update keywords of broadcast-channel

--- a/projects/broadcast-channel/package.json
+++ b/projects/broadcast-channel/package.json
@@ -15,16 +15,18 @@
   },
   "keywords": [
     "angular",
-    "broadcast-channel",
-    "js",
     "api",
-    "channel",
     "broadcast",
+    "broadcast-channel",
+    "channel",
+    "js",
     "ng",
-    "ng-service",
-    "ng-services",
     "ng-broadcast",
     "ng-broadcast-channel",
+    "ng-service",
+    "ng-services",
+    "provide",
+    "provider",
     "service"
   ],
   "private": false,
