update - update tsconfig for broadcast-channel

--- a/projects/broadcast-channel/tsconfig.lib.prod.json
+++ b/projects/broadcast-channel/tsconfig.lib.prod.json
@@ -5,6 +5,9 @@
     "declarationMap": false
   },
   "angularCompilerOptions": {
-    "enableIvy": false
+    "compilationMode": "full",
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableIvy": true
   }
 }
