--- a/projects/mediastream/package.json
+++ b/projects/mediastream/package.json
@@ -34,10 +34,10 @@
     "url": "https://github.com/AsheTM/ng-services/tree/main/projects/mediastream"
   },
   "peerDependencies": {
-    "@angular/common": ">=11.0.0 <16.0.0",
-    "@angular/core": ">=11.0.0 <16.0.0"
+    "@angular/common": ">=16.0.0",
+    "@angular/core": ">=16.0.0"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.3.0"
   }
 }
